--- a/assets/css/public.css
+++ b/assets/css/public.css
@@ -1,10 +1,28 @@
-.sepid-otp-container {
+:root {
+    /*========== Colors ==========*/
+    --first-color: hsl(342, 67%, 53%);
+    --first-color-alt: hsl(342, 67%, 45%);
+    --text-color: hsl(231, 12%, 98%);
+    --body-color: hsl(231, 100%, 94%);
+    --shadow-color:hsl(342, 67%, 40%);
+}
+
+/*========== Utilities ==========*/
+.spd-hidden{
+    display:none
+}
+
+.spd-hidden-labels label{
+    display: none !important;
+}
+
+/*========== Forms ==========*/
+.spd-otp-container {
     max-width: 400px;
     margin: 0 auto;
     padding: 20px;
-    border: 1px solid #ddd;
     border-radius: 8px;
-    background-color: #f9f9f9;
+    background-color: #fff;
 }
 
 .otp-form {
@@ -17,12 +35,6 @@
     font-weight: bold;
 }
 
-.otp-form label {
-    display: block;
-    margin-bottom: 5px;
-    font-size: 14px;
-}
-
 .otp-form input {
     width: 100%;
     padding: 10px;
@@ -31,24 +43,105 @@
     border-radius: 4px;
 }
 
-.otp-form button {
-    width: 100%;
-    padding: 10px;
-    background-color: #0073aa;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
+input#phone,
+input#email:focus,
+input#otp_code:focus{
+    direction:ltr;
+    text-align:left
 }
 
-.otp-form button:hover {
-    background-color: #005177;
+#resend-otp{
+    display: none;
+    padding: 32px 0;
+    text-align: center;
+}
+#resend-otp .timer{
+    font-size: 16px;
+    color: var(--first-color);
 }
 
-.success {
+#resend-otp .resend-btn{
+    display: none;
+    cursor:pointer;
+    color: var(--first-color);
+}
+
+.form-message{
+    padding: 16px 0;
+}
+
+.form-message .success {
     color: green;
 }
 
-.error {
+.form-message .error {
     color: red;
+}
+
+#phone-clone{
+    color: var(--first-color)
+}
+
+
+.spd-button{
+    background-color: var(--first-color) !important;
+    color: #fff;
+    border-radius: 4px;
+    position: relative;
+    display: flex;
+    width:100%;
+    align-items: center;
+    justify-content: center;
+    padding: 12px 10px;
+    overflow: hidden;
+    border:none;
+    outline: none;
+}
+.spd-button.loading{
+    cursor: wait;
+}
+.spd-button .text{
+    position: relative;
+}
+.spd-button.loading:before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 150%;
+    height: 100%;
+    background: repeating-linear-gradient(60deg,
+    transparent,
+    transparent 0.75rem,
+    var(--first-color-alt) 0.75rem,
+    var(--first-color-alt) 1.5rem);
+    animation: bgloading 1s infinite linear;
+}
+
+
+.spinner-loading {
+    border: 4px solid rgba(0, 0, 0, 0.1);
+    border-left-color: #ffffff;
+    border-radius: 50%;
+    width: 13px;
+    height: 13px;
+    animation: spin 1s linear infinite;
+    display: none;
+}
+
+@keyframes bgloading {
+    0% {
+        transform: translateX(0);
+    }
+    100% {
+        transform: translateX(-1.75rem);
+    }
+}
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
 }
